# reflex

./: AGENT.md  README.md  docs.json  pyproject.toml  ui-docs.docx
.github/workflows/: ci.yml  sync-docs.yml
docs/: analysis.mdx  cli.mdx  configuration.mdx  dashboard.mdx  explainability.mdx  integrations.mdx  introduction.mdx  modes.mdx  providers.mdx  quickstart.mdx  strategies.mdx  tutorial-dev-assistant.mdx  tutorial-rag-pipeline.mdx  tutorial-security-incidents.mdx
docs/api/: optimizer.mdx  result.mdx
examples/: basic_usage.py  cnn_dailymail.csv  cnn_dailymail.jsonl  cnn_dailymail_prompt.md  create_cnn_dailymail.py  create_security_incidents.py  sample_data.jsonl  sample_prompt.md  security_incidents.csv  security_incidents.jsonl  security_incidents_judge.md  security_incidents_prompt.md  security_incidents_run.py  summarization.csv  summarization.jsonl  summarization_prompt.md
examples/dev_assistant/: judge.md  pipeline.py  questions.json
examples/rag_qa/: judge.md  pipeline.py  prompt.md  questions.json
src/aevyra_reflex/: __init__.py  agent.py  callbacks.py  cli.py  lang.py  optimizer.py  prompts.py  result.py  run_store.py  trace.py
src/aevyra_reflex/dashboard/: __init__.py  app.html  server.py
src/aevyra_reflex/strategies/: __init__.py  auto.py  base.py  fewshot.py  iterative.py  pdo.py  structural.py
tests/: conftest.py  test_agent.py  test_callbacks.py  test_cli.py  test_dashboard.py  test_full_eval_steps.py  test_lang.py  test_mini_batch.py  test_ollama.py  test_optimizer.py  test_result.py  test_rewrite_log.py  test_run_store.py  test_source_model.py  test_statistical_significance.py  test_strategies.py  test_structural_history.py  test_trace.py  test_train_test_split.py  test_validation_split.py
