[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aevyra-reflex"
version = "0.1.0"
description = "Agentic prompt optimization — an AI agent that diagnoses eval failures and rewrites prompts until your model hits the target score"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Aevyra AI" },
]

keywords = [
    "prompt-optimization", "prompt-engineering", "llm", "eval",
    "benchmark", "ai", "machine-learning", "aevyra",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aevyra-verdict>=0.1.0",
    "anthropic>=0.30",          # default reasoning model (Claude)
    "aevyra-verdict[anthropic]>=0.1.0",
    "typer>=0.12",
    "numpy>=1.24",
    "tqdm>=4.60",
]

[project.optional-dependencies]
openai   = ["openai>=1.0",       "aevyra-verdict[openai]>=0.1.0"]
google   = ["google-genai>=1.0", "aevyra-verdict[google]>=0.1.0"]
mistral  = ["mistralai>=1.0",    "aevyra-verdict[mistral]>=0.1.0"]
cohere   = ["cohere>=5.0",       "aevyra-verdict[cohere]>=0.1.0"]
all      = [
    "openai>=1.0",
    "google-genai>=1.0",
    "mistralai>=1.0",
    "cohere>=5.0",
    "aevyra-verdict[all]>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
aevyra-reflex = "aevyra_reflex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
